Add header and basic styling  #4

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Basic HTML page</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <header class="header">
+      <h1 class="title">GitHub Friends</h1>
+      <p class="catchphrase">
+        It might take some time to get used to GitHub but you'll know this is
+        one of your bestfriend in your whole career!
+      </p>
+    </header>
   </body>
 </html>
