headingを日本語に変更  #10

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="title">GitHub Friends</h1>
+      <h1 class="title">GitHubフレンズ</h1>
       <p class="catchphrase">
         It might take some time to get used to GitHub but you'll know this is
         one of your bestfriend in your whole career!
